@@ -396,21 +396,6 @@ sub finish_header
 		$algorithm->finish_header;
 	}
 
-	# For each parsed signature, check it for validity. If none are valid,
-	# our result is "invalid" and our result detail will be the reason
-	# why the last signature was invalid.
-
-	foreach my $signature (@{$self->{signatures}})
-	{
-		unless (check_signature_identity($signature))
-		{
-			$self->{signature_reject_reason} = "bad identity";
-			$signature->result("invalid",
-				$self->{signature_reject_reason});
-			next;
-		}
-	}
-
 	# stop processing signatures that are already known to be invalid
 	@{$self->{algorithms}} = grep
 		{
@@ -434,6 +419,12 @@ sub _check_and_verify_signature
 
 		# check signature
 		my $signature = $algorithm->signature;
+		unless (check_signature_identity($signature))
+		{
+			$self->{signature_reject_reason} = "bad identity";
+			return ("invalid", $self->{signature_reject_reason});
+		}
+
 		# get public key
 		my $pkey;
 		eval
